--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,36 @@
-asgiref==3.7.2 ; python_version >= '3.7'
+asgiref==3.7.2
 boto3==1.34.17
-botocore==1.34.17 ; python_version >= '3.8'
-django==5.0.1
+botocore==1.34.17
+cachetools==5.3.2
+certifi==2024.2.2
+charset-normalizer==3.3.2
+Django==5.0.1
 django-environ==0.11.2
 django-storages==1.14.2
-jmespath==1.0.1 ; python_version >= '3.7'
+google-api-core==2.17.1
+google-api-python-client==2.118.0
+google-auth==2.28.1
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+googleapis-common-protos==1.62.0
+httplib2==0.22.0
+idna==3.6
+jmespath==1.0.1
+oauthlib==3.2.2
 pillow==10.2.0
+protobuf==4.25.3
 psycopg2-binary==2.9.9
-python-dateutil==2.8.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-s3transfer==0.10.0 ; python_version >= '3.8'
-six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sqlparse==0.4.4 ; python_version >= '3.5'
-tzdata==2023.4 ; sys_platform == 'win32'
-urllib3==2.0.7 ; python_version >= '3.10'
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pytz==2024.1
+requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
+s3transfer==0.10.0
+six==1.16.0
+sqlparse==0.4.4
+tzdata==2023.4
+uritemplate==4.1.1
+urllib3==2.0.7
